# mini-hackathon-pentakill

./: .gitignore  README.md  config.yaml  features_stats.py  params.yaml  pyproject.toml  requirements.txt
app/: __init__.py  app.py  routes.py
app/HackathonFrontEnd/: FrontEnd.css  FrontEnd.html  testing.html
app/output/: jd.csv  resume.csv
app/static/: ThirdFrontEnd.css
app/templates/: ThirdFrontEnd.html
app/utils/: files2csv.py  gpt_openai.py  openai.py  textract.py
docs/docs/: index.md
notebooks/: hacking.ipynb  main.ipynb
src/: evaluate.py  prepare.py  train.py
src/utils/: operation_utils.py
