[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pentakill-cv-analysis"
version = "0.0.1"
description = "Project of cv analysis, Experaince GenAI 2.0 Hackathon"
authors = [
  { name = "Pentakil" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["pentakill-cv-analysis"]
force_sort_within_sections = true
